--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="wrap">
     <div class="card" role="form" aria-labelledby="ttl">
       <h1 id="ttl">Conversión de kilos a litros por densidade</h1>
-      <p class="sub">Introduce graxa, proteína, temperatura e kilos. Validación estrita e cálculo en tempo real.</p>
+      <p class="sub">Introduce graxa, proteína, temperatura e kilos.</p>
 
       <div class="grid">
         <div class="field">
